puppet/parser/example/error/github/raw.githubusercontent.com/bbockelm/hcc-config/6f4c5d1544d990a61f8aab3b503e9a3e3f9ae663/manifests/red/site.pp
# entry point for red
# similar layout to example42 medium

# intrastructure layout
import "infrastructures/*.pp"

# node definitions
import "nodes/*.pp"
